# bitchatx

./: BUILD.md  CHANGELOG.md  CHANNELS.md  COMMANDS.md  Cargo.toml  IDENTITY.md  KEYBOARD.md  LOGIN.md  MESSAGE_FIX_SUMMARY.md  README.md  SCROLLING_FIX_SUMMARY.md  WHOIS_TAB_COMPLETION_FIX.md  build.sh  test_logo  test_logo.rs
.github/workflows/: build.yml
src/: app.rs  main.rs
src/channels/: manager.rs  message.rs  mod.rs
src/nostr/: client.rs  georelay_directory.rs  identity.rs  mod.rs
src/ui/: mod.rs
